{
    "name": "ActiveBattleInput",
    "maps": [
        {
            "name": "AssignedActions",
            "id": "cea2a61a-925f-4fb4-ae08-4d7cb635ced2",
            "actions": [
                {
                    "name": "One",
                    "type": "Button",
                    "id": "ee631811-2891-424f-aa43-eb6a7ffd00cc",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Two",
                    "type": "Button",
                    "id": "8eb8e97b-388d-4e60-bca6-7e7fa69c0f27",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Three",
                    "type": "Button",
                    "id": "e0235be8-8635-4738-966d-ed43b25c38c5",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Four",
                    "type": "Button",
                    "id": "f9fbbd60-bbf0-485b-8bba-90dd9d6f1467",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Five",
                    "type": "Button",
                    "id": "33d2fa91-f98a-4b70-b6dd-15c613724a8e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Six",
                    "type": "Button",
                    "id": "b39d8943-0de1-452e-acb7-693c1fa725c2",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Seven",
                    "type": "Button",
                    "id": "4d1290a1-d3a7-4fdc-9814-8bff6238dc0e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Eight",
                    "type": "Button",
                    "id": "8188c31f-4ba3-4941-a4d1-be819bd6cc6f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Nine",
                    "type": "Button",
                    "id": "88ff3fb2-6e9d-4e99-bdb9-d2cbca70730c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Zero",
                    "type": "Button",
                    "id": "da1869f6-0f5f-4c36-a721-6d1d9bd6724f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "33861a05-afcf-4ca7-ac91-4f57cbb7ceb9",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "One",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2dd6663e-db88-4e59-96f6-db45c0f091b5",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Two",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a44813b9-f93e-4c1b-9778-b4daf4e584b6",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Three",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "aeaf0c72-7186-4416-9d26-1d260f9f45ea",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Four",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9b6bc4c4-e02d-4363-ba43-f98f5ae6035b",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Five",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fbba2e36-c5ad-41f1-ac32-0c543f9689e3",
                    "path": "<Keyboard>/6",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Six",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "907f086b-918c-48b0-b3c0-52eca535b387",
                    "path": "<Keyboard>/7",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Seven",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7fa9f5e4-f294-4435-8599-31208e1c4c4f",
                    "path": "<Keyboard>/8",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Eight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "85fab82c-ccf1-4a48-a976-649c15a85d6f",
                    "path": "<Keyboard>/9",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Nine",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "12369796-0c45-46e9-9c6d-e51841babbcf",
                    "path": "<Keyboard>/0",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Zero",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "ActiveBattle",
            "id": "a614180d-6fd5-416d-85e5-c1cbe6247ecf",
            "actions": [
                {
                    "name": "ActionL",
                    "type": "Button",
                    "id": "39bc071b-3a96-4753-bcaf-ced10f77f864",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ActionR",
                    "type": "Button",
                    "id": "20ed3bfa-729c-4af6-8b1d-582b60195dfb",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "73288ef5-8e5b-43d0-a024-8245494368de",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ActionL",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "54f023f0-ac26-4560-b0cb-64902c85afd3",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ActionR",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}